get Transactions Summary for month

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -28,7 +28,7 @@
 }
 
 body {
-  color: var(--text-color);
+  color: var(--text-color) !important;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 !important;
