--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -34,3 +34,9 @@ body {
   margin: 0 !important;
   padding: 0 !important;
 }
+
+.table-heading {
+  color: var(--text-color) !important;
+  font-weight: bold !important;
+  padding: 10px !important;
+}
